# MotiPrompt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
motiprompt/: android.txt  buildozer.spec  main.py  motiprompt.ini  motiprompt.kv  screens.py  services.py  settings.json
motiprompt/quotes/: default.json  osman_i_mazur.json
tests/: test_addquote.py  test_app.py  test_myroot.py  test_settings.py  test_showquotes.py
